--- a/default_config/products/personal-auto/policy/schedule.template.liquid
+++ b/default_config/products/personal-auto/policy/schedule.template.liquid
@@ -64,9 +64,9 @@
     <tr>
     <td>Qualification Details</td>
     <td>
-      <b>Household Felony History Declared as:</b>  {{policy_h.preliminary_question_10_year_felony_conviction}}<br>
-      <b>Household Fraud History Declared as: </b>{{policy_h.preliminary_question_insurance_fraud_conviction}}<br>
-      <b>Reports Permission:</b> {{policy_h.preliminary_question_run_third_party_reports}}<br></td>
+      <b>Household Felony History Declared as:</b>  {{policy_h.10_year_felony_conviction}}<br>
+      <b>Household Fraud History Declared as: </b>{{policy_h.insurance_fraud_conviction}}<br>
+      <b>Reports Permission:</b> {{policy_h.run_third_party_reports}}<br></td>
     </tr>
    <tr>
     <td>Exposure(s)</td>
