--- a/default_config/products/personal-auto/policy/endt.template.liquid
+++ b/default_config/products/personal-auto/policy/endt.template.liquid
@@ -1,40 +1,4 @@
-{% assign this_endt = data.policy.modifications.last %}
-{% assign per_mod = this_endt.exposure_modifications[0].peril_modifications[0] %}
-{% assign per_loc = per_mod.peril_locator %}
-{% assign per_cha_loc = per_mod.replaced_peril_characteristics_locator %}
-
-{% comment %} gather info on pre-endt values {% endcomment %}
-{% comment %} this gets the old peril characteristics (old_coverage_c) {% endcomment %}
-{% for exposure in data.policy.exposures %}
-  {% for peril in exposure.perils %}
-    {% for characteristic in peril.characteristics %}
-      {% if characteristic.locator == per_cha_loc %}
-        {% assign old_coverage_c = characteristic %}
-      {% endif %}
-    {% endfor %}
-  {% endfor %}
-{% endfor %}
-
-{% assign exp_cha_loc = old_coverage_c.exposure_characteristics_locator %}
-{% assign pol_cha_loc = old_coverage_c.policy_characteristics_locator %}
-
-{% comment %} this gets the old exposure characteristics (old_exposure_c) {% endcomment %}
-{% for exposure in data.policy.exposures %}
-  {% for exp_cha in exposure.characteristics %}
-    {% if exp_cha.locator == exp_cha_loc %}
-      {% assign old_exposure_c = exp_cha %}
-    {% endif %}
-  {% endfor %}
-{% endfor %}
-
-{% comment %} this gets the old policy characteristics (old_policy_c) {% endcomment %}
-{% for pol_cha in data.policy.characteristics %}
-  {% if pol_cha.locator == pol_cha_loc %}
-    {% assign old_policy_c = pol_cha %}
-  {% endif %}
-{% endfor %}
-{% comment %} done getting pre-endt values {% endcomment %}
-
+{% assign policy_updates = data.endorsement.policy_updates %}
 {% assign policy_c = data.policy.characteristics.last %}
 {% assign ph_v = data.policyholder.entity.values %}
 {% assign end_display = policy_c.policy_end_timestamp | timestamp_millis_add: "day", -1 %}
@@ -67,6 +31,8 @@
 
 <h1>Endorsement Confirmation</h1><br>
 
+{% comment %} Display top-level info on the customer, policy, and endorsement {% endcomment %}
+
 <table class="table border-tops-only content">
   <tr>
     <td>Policyholder</td>
@@ -89,35 +55,92 @@
     <td>
       <b>ID:</b> {{data.endorsement.display_id}}<br>
       <b>Type:</b> {{data.endorsement.name}}<br>
-      <b>Issued:</b> {{this_endt.issued_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}<br>
+      <b>Issued:</b> {{data.endorsement.issued_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}<br>
       <b>Effective:</b> {{data.endorsement.start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
     </td>
   </tr>
 </table>
 
-<table class="table price-table">
-    <tr>
-      <td><b>Item</b></td>
-      <td><b>Old Value</b></td>
-      <td><b>New Value</b></td>
-    </tr>
+{% comment %} Display the data changed by the endorsement {% endcomment %}
 
-  {% for changed_field in data.endorsement.field_values %}
-    <tr>
-      <td>{{ changed_field[0] }}</td>
-      <td>
-        {% for old_field in old_policy_c.field_values %}
-            {% if old_field[0] == changed_field[0] %}
-                {{old_field[1]}}
-            {% endif %}
-        {% endfor %}
-      </td>
-      <td>{{ changed_field[1] }}</td>
-    </tr>
+<h3> Policy Updates </h3>
+<table class="table price-table">
+  <tr>
+    <td><b>Field</b></td>
+    <td><b>Old Value</b></td>
+    <td><b>New Value</b></td>
+  </tr>
+  {% comment %} Display updated field values in a table {% endcomment %}
+  {% for entry in policy_updates.all_field_values %}
+      {% unless entry[1].endorsement_effect == "unchanged" %}
+            <tr>
+              <td>{{entry[1].title}}</td>
+              <td>{{entry[1].old_value}}</td>
+              <td>{{entry[1].new_value}}</td>
+            </tr>
+      {% endunless %}
   {% endfor %}
-    <tr>
-    </tr>
+  {% for field_group_type in policy_updates.updated_field_groups %}
+    {% for entry in field_group_type[1] %}
+      {% comment %} Display updated field groups in the same table {% endcomment %}
+      <tr>
+        <td><b>Updated {{entry.title}}</b></td>
+        <td></td>
+        <td></td>
+      </tr>
+      {% for entry in entry.updated_field_values %}
+        <tr>
+          <td>{{entry[1].title}}</td>
+          <td>{{entry[1].old_value}}</td>
+          <td>{{entry[1].new_value}}</td>
+        </tr>
+      {% endfor %}
+    {% endfor %}
+  {% endfor %}
+  <tr></tr>
 </table>
+{% comment %} Display updated fields within each exposure {% endcomment %}
+{% comment %} updated exposures are grouped by exposure name - first find each group {% endcomment %}
+{% for exposure_group in policy_updates.updated_exposures %}
+  {% comment %} Then loop through the updated exposures within each group {% endcomment %}
+  {% for exposure_update in exposure_group[1] %}
+    {% assign exp_v = exposure_update.all_field_values %}
+    <h3>Updated {{exposure_update.display_name}}: {{exp_v.first_name.new_value}} {{exp_v.last_name.new_value}}</h3>
+    <table class="table price-table">
+      <tr>
+        <td><b>Field</b></td>
+        <td><b>Old Value</b></td>
+        <td><b>New Value</b></td>
+      </tr>
+      {% comment %} Display updated field values in a table {% endcomment %}
+      {% for entry in exposure_update.updated_field_values %}
+        <tr>
+          <td>{{entry[1].title}}</td>
+          <td>{{entry[1].old_value}}</td>
+          <td>{{entry[1].new_value}}</td>
+        </tr>
+      {% endfor %}
+      {% for field_group_type in exposure_update.updated_field_groups %}
+        {% for entry in field_group_type[1] %}
+          {% comment %} Display updated field groups in the same table {% endcomment %}
+          <tr>
+            <td><b>Updated {{entry.title}}</b></td>
+            <td></td>
+            <td></td>
+          </tr>
+          {% for entry in entry.updated_field_values %}
+            <tr>
+              <td>{{entry[1].title}}</td>
+              <td>{{entry[1].old_value}}</td>
+              <td>{{entry[1].new_value}}</td>
+            </tr>
+          {% endfor %}
+        {% endfor %}
+      {% endfor %}
+      <tr></tr>
+    </table>
+  {% endfor %}
+{% endfor %}
 
 </body>
 
