--- a/default_config/products/personal-auto/policy/exposures/vehicle/perils/uninsured_motorist.premium.liquid
+++ b/default_config/products/personal-auto/policy/exposures/vehicle/perils/uninsured_motorist.premium.liquid
@@ -1,26 +1,21 @@
-{% comment %}
-{% assign vehicle_value = data.exposure_characteristics.field_values.vehicle_value %}
-{% assign premium = vehicle_value | times: 0.037 | round %}
-
-{% assign rate = "vehicle_rate_table" | lookup: data.exposure_characteristics.field_values.vehicle_type %}
-{% assign premium = premium | times: rate | round %}
-
-{% endcomment %}
+{% assign policy_v = data.policy_characteristics.field_values %}
+{% assign exp_v = data.exposure_characteristics.field_values %}
+{% assign peril_c = data.peril_characteristics %}
 
 {% assign premium = 19.88 %}
 
-{% if data.policy_characteristics.field_values.channel == 'Direct' %}
+{% if policy_v.channel == 'Direct' %}
 	{% assign premium = premium | times: 0.9 %}
 {% endif %}
 
-{% if data.policy_characteristics.field_values.channel == 'Agent' %}
+{% if policy_v.channel == 'Agent' %}
 	{% assign premium = premium | times: 1.4444 %}
 {% endif %}
 
 {% assign premium = premium | times: 0.30 %}
 
-{% if data.peril_characteristics.indemnity_in_aggregate > 0 %}
-	{% assign adj = data.peril_characteristics.indemnity_in_aggregate | minus: 100000 %}
+{% if peril_c.indemnity_in_aggregate > 0 %}
+	{% assign adj = peril_c.indemnity_in_aggregate | minus: 100000 %}
 	{% if adj < 0 %}
 		{% assign adj = 0 %}
 	{% endif %}
@@ -29,16 +24,19 @@
 {% endif %}
 
 {% comment %} scale premium according to policy duration {% endcomment %}
-{% assign days_duration = data.peril_characteristics.coverage_start_timestamp | get_30_360_day_count: data.peril_characteristics.coverage_end_timestamp %}
+{% assign days_duration = peril_c.coverage_start_timestamp | get_30_360_day_count: peril_c.coverage_end_timestamp %}
 {% assign scaled_premium = premium | times: days_duration | divided_by: 360.00 %}
 
 {{ scaled_premium | set_peril_premium }}
 
-{{ scaled_premium | times: 0.8 | set_peril_technical_premium }}
+{% assign technical_premium = scaled_premium | times: 0.8 %}
+{{ technical_premium | set_peril_technical_premium }}
 
 {% comment %} commission at a flat 5% {% endcomment %}
-{% if data.policy_characteristics.field_values.channel == 'Agent' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Agent1234" }}
-{% elsif data.policy_characteristics.field_values.channel == 'Broker' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Broker6789" }}
+{% if policy_v.channel == 'Agent' %}
+	{% assign agent_comm = scaled_premium | times: 0.05 %}
+    {{ agent_comm | add_commission: "Agent1234" }}
+{% elsif policy_v.channel == 'Broker' %}
+	{% assign broker_comm = scaled_premium | times: 0.05 %}
+    {{ broker_comm | add_commission: "Broker6789" }}
 {% endif %}
