--- a/default_config/products/personal-auto/policy/endt.template.liquid
+++ b/default_config/products/personal-auto/policy/endt.template.liquid
@@ -1,7 +1,7 @@
 {% assign policy_updates = data.endorsement.policy_updates %}
 {% assign policy_c = data.policy.characteristics.last %}
 {% assign ph_v = data.policyholder.entity.values %}
-{% assign end_display = policy_c.policy_end_timestamp | timestamp_millis_add: "day", -1 %}
+{% assign end_display = data.policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
 
 <head>
   <meta charset="UTF-8">
@@ -46,7 +46,7 @@
     <td>
       <b>ID:</b> {{data.policy.display_id}}<br>
       <b>Effective:</b>
-      From {{policy_c.policy_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+      From {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
       through {{end_display | timestamp_millis_print: "MMM dd, YYYY" }}<br>
     </td>
   </tr>
