--- a/default_config/products/personal-auto/policy/policy.calculations.liquid
+++ b/default_config/products/personal-auto/policy/policy.calculations.liquid
@@ -1,7 +1,5 @@
 {% assign policy_char = data.policy.characteristics[0] %}
-{% assign total = policy_char.gross_premium | plus: policy_char.gross_taxes %}
-
-{% assign txn_fee = total | times: 0.03 %}
+{% assign txn_fee = policy_char.gross_premium | times: 0.03 %}
 
 {{ txn_fee | add_fee: "transaction" }}
 {{ 10 | add_fee: "underwriting" }}
