--- a/default_config/products/simple_auto/policy/invoice.template.liquid
+++ b/default_config/products/simple_auto/policy/invoice.template.liquid
@@ -1,7 +1,9 @@
-{% assign policy_c = data.policy.characteristics[0] %}
 {% assign policy_v = data.policy.exposures[0].characteristics[0].field_values %}
 {% assign ph_v = data.policyholder.entity.values %}
+{% assign invoice = data.policy.invoices.last %}
 {% assign end_display = data.policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
+{% assign due_display = invoice.due_timestamp | timestamp_millis_add: "day", -1 %}
+{% assign infin = data.invoice_financials %}
 
 <head>
   <meta charset="UTF-8">
@@ -15,7 +17,7 @@
     <tr>
       <td>
         <p class="header-contact">
-          ACME Insurance Co.<br>
+          Acme Insurance Co.<br>
           101 Mission Street<br>
           San Francisco, CA<br>
           +1 415 555 5555<br>
@@ -29,38 +31,55 @@
   </table>
 {% endheader %}
 
-<h1>Term Life Insurance Policy Schedule</h1><br>
+<h1>Simple Auto Insurance Invoice</h1><br>
 
-<h3>Insurance Details</h3>
+Invoice Number: <b>{{invoice.display_id}}</b><br>
+Invoice Date: <b>{{invoice.created_timestamp | timestamp_millis_print: "MMM dd, YYYY"}}</b><br>
 
 <table class="table border-tops-only content">
   <tr>
     <td>Policyholder</td>
     <td>
       <b>ID:</b> {{data.policyholder.id}}<br>
-      <b>Name:</b> {{ph_v.first_name}} {{ph_v.last_name}}<br>
-      <b>Date of Birth:</b> {{ph_v.date_of_birth | timestamp_millis_print: "MMM dd, YYYY" }}<br>
+      <b>Name:</b> {{ph_v.first_name}} {{ph_v.last_name}}
     </td>
   </tr>
   <tr>
     <td>Policy</td>
     <td>
       <b>ID:</b> {{data.policy.display_id}}<br>
-      <b>Effective:</b> From {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+      <b>Effective:</b>
+      From {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
       through {{end_display | timestamp_millis_print: "MMM dd, YYYY" }}<br>
-      <b>Sum Assured:</b> {{data.policy.exposures[0].perils[0].characteristics[0].lump_sum_payment | format_number_currency: "en","US" }}<br>
-      <b>Term:</b> Custom
     </td>
   </tr>
   <tr>
-    <td>Total Premium</td>
-    <td>{{policy_c.gross_premium | format_number_currency: "en","US" }}</td>
+    <td>Due date</td>
+    <td>{{due_display | timestamp_millis_print: "MMM dd, YYYY" }}</td>
   </tr>
 </table>
 
-<br>
+<table class="table price-table">
+  {% for fintr in infin.financial_transactions %}
+    {% assign transaction_description = fintr.peril_name %}
+    {% if fintr.type == 'tax' or fintr.type == 'fee' %}
+      {% assign transaction_description = transaction_description | append: " " | append: fintr.tax_name | append: fintr.fee_name %}
+    {% endif %}
+    {% assign transaction_description = transaction_description | append: " " | append: fintr.type %}
+    {% assign transaction_description = transaction_description | strip | capitalize | replace: "_", " " %}
 
-<b>Authorized on</b> {{data.policy.issued_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+    <tr>
+      <td>{{ transaction_description }}</td>
+      <td>{{ fintr.amount | format_number_currency: 'en', 'US' }}</td>
+    </tr>
+  {% endfor %}
+  <tr>
+    <td><b>Total Due</b></td>
+    <td><b>{{ infin.total_due | format_number_currency: 'en', 'US' }}</b></td>
+  </tr>
+</table>
+
+</body>
 
 {% footer %}
   <meta charset="UTF-8">
@@ -83,3 +102,6 @@
     </tr>
   </table>
 {% endfooter %}
+
+</html>
+
