--- a/default_config/products/personal-auto/policy/invoice.template.liquid
+++ b/default_config/products/personal-auto/policy/invoice.template.liquid
@@ -1,7 +1,8 @@
-{% assign policy_v = data.policy.exposures[0].characteristics[0].field_values %}
+{% assign policy = data.policy %}
+{% assign policy_v = policy.exposures[0].characteristics[0].field_values %}
 {% assign ph_v = data.policyholder.entity.values %}
-{% assign invoice = data.policy.invoices.last %}
-{% assign end_display = data.policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
+{% assign invoice = policy.invoices.last %}
+{% assign end_display = policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
 {% assign due_display = invoice.due_timestamp | timestamp_millis_add: "day", -1 %}
 {% assign infin = data.invoice_financials %}
 
@@ -34,7 +35,7 @@
 <h1>Auto Insurance Invoice</h1><br>
 
 Invoice Number: <b>{{invoice.display_id}}</b><br>
-Invoice Date: <b>{{invoice.created_timestamp | timestamp_millis_print: "MMM dd, YYYY"}}</b><br>
+Invoice Date: <b>{{invoice.created_timestamp | timestamp_millis_print: "d MMM YYYY"}}</b><br>
 
 <table class="table border-tops-only content">
   <tr>
@@ -47,15 +48,15 @@ Invoice Date: <b>{{invoice.created_timestamp | timestamp_millis_print: "MMM dd, 
   <tr>
     <td>Policy</td>
     <td>
-      <b>ID:</b> {{data.policy.display_id}}<br>
+      <b>ID:</b> {{policy.display_id}}<br>
       <b>Effective:</b>
-      From {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
-      through {{end_display | timestamp_millis_print: "MMM dd, YYYY" }}<br>
+      From {{policy.original_contract_start_timestamp | timestamp_millis_print: "d MMM YYYY" }}
+      through {{end_display | timestamp_millis_print: "d MMM YYYY" }}<br>
     </td>
   </tr>
   <tr>
     <td>Due date</td>
-    <td>{{due_display | timestamp_millis_print: "MMM dd, YYYY" }}</td>
+    <td>{{due_display | timestamp_millis_print: "d MMM YYYY" }}</td>
   </tr>
 </table>
 
