--- a/default_config/products/personal-auto/policy/cancellation.template.liquid
+++ b/default_config/products/personal-auto/policy/cancellation.template.liquid
@@ -1,4 +1,5 @@
-{% assign cancellation = data.policy.cancellation %}
+{% assign policy = data.policy %}
+{% assign cancellation = policy.cancellation %}
 
 <head>
   <meta charset="UTF-8">
@@ -24,11 +25,11 @@
 
 <h1>Policy Canceled</h1>
 
-Policy {{ data.policy.display_id }} is canceled effective {{ cancellation.effective_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}.
+Policy {{ policy.display_id }} is canceled effective {{ cancellation.effective_timestamp | timestamp_millis_print: "d MMM YYYY" }}.
 
 <br><br><br><br>
 
-<b>Authorized on</b> {{ data.policy.updated_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+<b>Authorized on</b> {{ policy.updated_timestamp | timestamp_millis_print: "d MMM YYYY" }}
 
 <br>
 
