--- a/default_config/products/personal-auto/policy/exposures/vehicle/perils/comprehensive.premium.liquid
+++ b/default_config/products/personal-auto/policy/exposures/vehicle/perils/comprehensive.premium.liquid
@@ -12,20 +12,16 @@
 	{% assign premium = premium | times: 0.9 | round %}
 {% endif %}
 
-{% comment %} scale premium according to policy duration {% endcomment %}
-{% assign days_duration = peril_c.coverage_start_timestamp | get_30_360_day_count: peril_c.coverage_end_timestamp %}
-{% assign scaled_premium = premium | times: days_duration | divided_by: 360.00 %}
+{{ premium | set_year_premium }}
 
-{{ scaled_premium | set_peril_premium }}
-
-{% assign technical_premium = scaled_premium | times: 0.8 %}
-{{ technical_premium | set_peril_technical_premium }}
+{% assign technical_premium = premium | times: 0.8 %}
+{{ technical_premium | set_year_technical_premium }}
 
 {% comment %} commission at a flat 5% {% endcomment %}
 {% if policy_v.channel == 'Agent' %}
-	{% assign agent_comm = scaled_premium | times: 0.05 %}
-    {{ agent_comm | add_commission: "Agent1234" }}
+	{% assign agent_comm = premium | times: 0.05 %}
+    {{ agent_comm | add_year_commission: "Agent1234" }}
 {% elsif policy_v.channel == 'Broker' %}
-	{% assign broker_comm = scaled_premium | times: 0.05 %}
-    {{ broker_comm | add_commission: "Broker6789" }}
+	{% assign broker_comm = premium | times: 0.05 %}
+    {{ broker_comm | add_year_commission: "Broker6789" }}
 {% endif %}
