--- a/default_config/products/personal-auto/policy/policy.calculations.liquid
+++ b/default_config/products/personal-auto/policy/policy.calculations.liquid
@@ -1,4 +1,4 @@
-{% assign policy_char = data.policy.characteristics[0] %}
+{% assign policy_char = data.policy.characteristics.last %}
 {% assign txn_fee = policy_char.gross_premium | times: 0.03 %}
 
 {{ txn_fee | add_fee: "transaction" }}
