--- a/default_config/products/personal-auto/policy/schedule.template.liquid
+++ b/default_config/products/personal-auto/policy/schedule.template.liquid
@@ -1,8 +1,8 @@
 {% assign ph_v     = data.policyholder.entity.values %}
-{% assign policy_c = data.policy.characteristics[0] %}
-{% assign policy_h = policy_c.field_values %}
-{% assign policy_v = data.policy.exposures[0].characteristics[0].field_values %}
-{% assign policy_p = data.policy.exposures.perils[0].characteristics[0].fields_values %}
+{% assign policy = data.policy %}
+{% assign policy_c = policy.characteristics[0] %}
+{% assign policy_v = policy_c.field_values %}
+{% assign exp_v = data.policy.exposures[0].characteristics[0].field_values %}
 {% assign end_display = data.policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
 
 <head>
@@ -40,37 +40,37 @@
     <td>Policyholder</td>
     <td> 
       <b>Name:</b> {{ph_v.first_name}} {{ph_v.last_name}}<br>
-      <b>DOB:</b> {{ph_v.date_of_birth | timestamp_millis_print: "MMM dd, YYYY" }}<br>
+      <b>DOB:</b> {{ph_v.date_of_birth | timestamp_millis_print: "d MMM YYYY" }}<br>
       <b>ID:</b> {{data.policyholder.id}}<br>
     </td>
   </tr>
    <tr>
     <td>Policy</td>
     <td>
-      <b>Number:</b> {{data.policy.display_id}}<br>
-      <b>Term:</b> {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
-      through {{end_display | timestamp_millis_print: "MMM dd, YYYY" }}<br>
-      <b>Multiple Drivers:</b> {{policy_h.multiple_drivers}}<br> 
+      <b>Number:</b> {{policy.display_id}}<br>
+      <b>Term:</b> {{policy.original_contract_start_timestamp | timestamp_millis_print: "d MMM YYYY" }}
+      through {{end_display | timestamp_millis_print: "d MMM YYYY" }}<br>
+      <b>Multiple Drivers:</b> {{policy_v.multiple_drivers}}<br> 
      </td>
     </tr>
     <tr>
     <td>Qualification Details</td>
     <td>
-      <b>Household Felony History Declared as:</b>  {{policy_h.10_year_felony_conviction}}<br>
-      <b>Household Fraud History Declared as: </b>{{policy_h.insurance_fraud_conviction}}<br>
-      <b>Reports Permission:</b> {{policy_h.run_third_party_reports}}<br></td>
+      <b>Household Felony History Declared as:</b>  {{policy_v.10_year_felony_conviction}}<br>
+      <b>Household Fraud History Declared as: </b>{{policy_v.insurance_fraud_conviction}}<br>
+      <b>Reports Permission:</b> {{policy_v.run_third_party_reports}}<br></td>
     </tr>
    <tr>
     <td>Exposure(s)</td>
     <td>
-      <b>Vehicle:</b> {{policy_v.year}} {{policy_v.make}} {{policy_v.model}} - {{policy_v.body_style}} 
-      {{policy_v.motorcycle_cc | format_number_pattern: "0" }} ({{policy_v.vehicle_type}}) <br>
+      <b>Vehicle:</b> {{exp_v.year}} {{exp_v.make}} {{exp_v.model}} - {{exp_v.body_style}} 
+      {{exp_v.motorcycle_cc | format_number_pattern: "0" }} ({{exp_v.vehicle_type}}) <br>
 
-      <b>License Plate #:</b> {{policy_v.license_plate}} <b>State:</b> {{policy_v.vehicle_plated_state}}<br>
-      <b>Purchase Details:</b> {{policy_v.vehicle_value | format_number_currency: "en","US" }} - {{policy_v.unrepaired_damage}} {{policy_v.ownership_indicator}}<br>
+      <b>License Plate #:</b> {{exp_v.license_plate}} <b>State:</b> {{exp_v.vehicle_plated_state}}<br>
+      <b>Purchase Details:</b> {{exp_v.vehicle_value | format_number_currency: "en","US" }} - {{exp_v.unrepaired_damage}} {{exp_v.ownership_indicator}}<br>
 
-      <b>Use:</b> {{policy_v.primary_vehicle_use}} - {{policy_v.distance_to_work_school}} <br>
-      <b>Yearly Mileage</b> {{policy_v.annual_miles | format_number_pattern: "0"}}<br>
+      <b>Use:</b> {{exp_v.primary_vehicle_use}} - {{exp_v.distance_to_work_school}} <br>
+      <b>Yearly Mileage</b> {{exp_v.annual_miles | format_number_pattern: "0"}}<br>
     </td>
   </tr>
   <tr>
@@ -78,20 +78,20 @@
     <td>
      <b>Gross Premium:</b>{{policy_c.gross_premium | format_number_currency: "en","US" }}</br>
      <b>Jurisdictional Taxes: </b>{{policy_c.gross_taxes | format_number_currency: "en","US" }}</br>
-     <b>Underwriting Fees: </b>{{data.policy.fees[0].amount | format_number_currency: "en","US" }}</br> 
-     <b>Transaction Fees: </b>{{data.policy.fees[1].amount | format_number_currency: "en","US" }}</br>
+     <b>Underwriting Fees: </b>{{policy.fees[0].amount | format_number_currency: "en","US" }}</br> 
+     <b>Transaction Fees: </b>{{policy.fees[1].amount | format_number_currency: "en","US" }}</br>
     </td>
   </tr>
   <tr>
   <td>Total Due</td>
     <td>
-     <b>{{ policy_c.gross_premium | plus: policy_c.gross_taxes  | plus: data.policy.fees[0].amount | plus: data.policy.fees[1].amount | format_number_currency: "en","US" }}</br> 
+     <b>{{ policy_c.gross_premium | plus: policy_c.gross_taxes  | plus: policy.fees[0].amount | plus: policy.fees[1].amount | format_number_currency: "en","US" }}</br> 
     </td>
   </table>
 
 <br>
 
-<b>Authorized on</b> {{data.policy.issued_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+<b>Authorized on</b> {{policy.issued_timestamp | timestamp_millis_print: "d MMM YYYY" }}
 
 {% footer %}
   <meta charset="UTF-8">
