--- a/default_config/products/term-life/policy/exposures/insured/perils/death.premium.liquid
+++ b/default_config/products/term-life/policy/exposures/insured/perils/death.premium.liquid
@@ -1,10 +1,12 @@
-{% assign start_year = data.policy.original_contract_start_timestamp | timestamp_millis_print: "YYYY" %}
+{% assign policy_v = data.policy_characteristics.field_values %}
+{% assign exp_v = data.exposure_characteristics.field_values %}
+{% assign start_year = data.policy_characteristics.policy_start_timestamp | timestamp_millis_print: "YYYY" %}
 
-{% assign dob_year = data.exposure_characteristics.field_values.dob | timestamp_millis_print: "YYYY" %}
+{% assign dob_year = exp_v.dob | timestamp_millis_print: "YYYY" %}
 {% assign age = start_year | minus: dob_year %}
 
-{% if data.exposure_characteristics.field_values.high_risk_sports contains 'Yes' %}
-    {% assign high_risk_factor = 500 %}
+{% if exp_v.high_risk_sports contains 'Yes' %}
+    {% assign high_risk_factor = 42 %}
 {% else %}
     {% assign high_risk_factor = 0 %}
 {% endif %}
@@ -14,13 +16,13 @@
 {% endif %}
 {% assign age_str = age | downcase %}
 
-{% if data.exposure_characteristics.field_values.sex == "Male" %} 
+{% if exp_v.sex == "Male" %} 
     {% if age > 64 %}
         {% assign price_per_month = 30 %}
     {% else %}
         {% assign price_per_month = "rate_table_male" | lookup: age_str %}
     {% endif %}
-{% elsif data.exposure_characteristics.field_values.sex == "Female" %}
+{% elsif exp_v.sex == "Female" %}
     {% if age > 64 %}
         {% assign price_per_month = 25 %}
     {% else %}
@@ -28,21 +30,14 @@
     {% endif %}
 {% endif %}
 
-{% assign total_premium = price_per_month | times: data.peril_characteristics.lump_sum_payment | divided_by: 10000 | times: 12 | plus: high_risk_factor | round %}
+{% assign premium = price_per_month | times: data.peril_characteristics.lump_sum_payment | divided_by: 15000 | plus: high_risk_factor %}
 
-{% assign peril_premium = total_premium | times: 0.70 | round %}
-
-{% comment %} scale premium according to policy duration {% endcomment %}
-{% assign days_duration = data.peril_characteristics.coverage_start_timestamp | get_30_360_day_count: data.peril_characteristics.coverage_end_timestamp %}
-{% assign scaled_premium = peril_premium | times: days_duration | divided_by: 360.00 %}
-
-{{ scaled_premium | set_peril_premium }}
-
-{{ scaled_premium | times: 0.8 | set_peril_technical_premium }}
+{{ premium | set_month_premium }}
+{{ premium | times: 0.8 | set_month_technical_premium }}
 
 {% comment %} commission at a flat 5% {% endcomment %}
-{% if data.policy_characteristics.field_values.channel == 'Agent' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Agent1234" }}
-{% elsif data.policy_characteristics.field_values.channel == 'Broker' %}
-    {{ scaled_premium | times: 0.05 | add_commission: "Broker6789" }}
+{% if policy_v.channel == 'Agent' %}
+    {{ premium | times: 0.05 | add_month_commission: "Agent1234" }}
+{% elsif policy_v.channel == 'Broker' %}
+    {{ premium | times: 0.05 | add_month_commission: "Broker6789" }}
 {% endif %}
