--- a/default_config/products/term-life/policy/schedule.template.liquid
+++ b/default_config/products/term-life/policy/schedule.template.liquid
@@ -1,6 +1,7 @@
+{% assign ph_v     = data.policyholder.entity.values %}
+{% assign policy = data.policy %}
 {% assign policy_c = data.policy.characteristics[0] %}
-{% assign policy_v = data.policy.exposures[0].characteristics[0].field_values %}
-{% assign ph_v = data.policyholder.entity.values %}
+{% assign policy_v = policy_c.field_values %}
 {% assign end_display = data.policy.effective_contract_end_timestamp | timestamp_millis_add: "day", -1 %}
 
 <head>
@@ -39,28 +40,28 @@
     <td>
       <b>ID:</b> {{data.policyholder.id}}<br>
       <b>Name:</b> {{ph_v.first_name}} {{ph_v.last_name}}<br>
-      <b>Date of Birth:</b> {{ph_v.date_of_birth | timestamp_millis_print: "MMM dd, YYYY" }}<br>
+      <b>Date of Birth:</b> {{ph_v.date_of_birth | timestamp_millis_print: "d MMM YYYY" }}<br>
     </td>
   </tr>
   <tr>
     <td>Policy</td>
     <td>
-      <b>ID:</b> {{data.policy.display_id}}<br>
-      <b>Effective:</b> From {{data.policy.original_contract_start_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
-      through {{end_display | timestamp_millis_print: "MMM dd, YYYY" }}<br>
-      <b>Sum Assured:</b> {{data.policy.exposures[0].perils[0].characteristics[0].lump_sum_payment | format_number_currency: "en","US" }}<br>
+      <b>ID:</b> {{ policy.display_id}}<br>
+      <b>Effective:</b> From {{ policy.original_contract_start_timestamp | timestamp_millis_print: "d MMM YYYY" }}
+      through {{end_display | timestamp_millis_print: "d MMM YYYY" }}<br>
+      <b>Sum Assured:</b> {{ policy.exposures[0].perils[0].characteristics[0].lump_sum_payment | format_number_currency: "en","US" }}<br>
       <b>Term:</b> Custom
     </td>
   </tr>
   <tr>
     <td>Total Premium</td>
-    <td>{{policy_c.gross_premium | format_number_currency: "en","US" }}</td>
+    <td>{{ policy_c.gross_premium | format_number_currency: "en","US" }}</td>
   </tr>
 </table>
 
 <br>
 
-<b>Authorized on</b> {{data.policy.issued_timestamp | timestamp_millis_print: "MMM dd, YYYY" }}
+<b>Authorized on</b> {{ policy.issued_timestamp | timestamp_millis_print: "d MMM YYYY" }}
 
 {% footer %}
   <meta charset="UTF-8">
