--- a/product_examples/errors-and-omissions/products/E&O/policy/schedule.template.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/schedule.template.liquid
@@ -63,7 +63,7 @@
    <tr>
     <td>Exposure(s)</td>
     <td>
-      <b>Professional Indemnity:</b> {{exp_v.professionalindemnity_type}} {{exp_v.parttimeemployees}} {{exp_v.fulltimeemployees}} - {{exp_v.office_domicile_state}} 
+      <b>Professional Indemnity:</b> {{exp_v.professionalindemnity_type}} {{exp_v.parttimeemployees}} {{exp_v.fulltimeemployees}} - {{exp_v.office_domicile_state}}<br>
       {%{{exp_v.motorcycle_cc | format_number_pattern: "0" }} ({{exp_v.vehicle_type}}) <br>%}
 
       {%<b>License Plate #:</b> {{exp_v.license_plate}} <b>State:</b> {{exp_v.vehicle_plated_state}}<br>%}
