Added Static Docs

--- a/product_examples/errors-and-omissions/products/E&O/policy/regulatory_disclosure.template.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/regulatory_disclosure.template.liquid
@@ -1,16 +1,10 @@
 {% assign exp_v = data.policy.exposures[0].characteristics[0].field_values %}
 
 
-{% if exp_v.vehicle_plated_state}} == "FL" %}
-	{{ "Uninsured Motorists Coverage FL.pdf" | render_static_document }}
-
-{% elsif exp_v.vehicle_plated_state}} == "MO" %}
-	{{ "Uninsured Motorists Coverage MO.pdf" | render_static_document }}
-
-{% elsif exp_v.vehicle_plated_state}} == "CA" %}
-	{{ "Uninsured Motorists Coverage CA.pdf" | render_static_document }}
+{% if exp_v.professionalindemnity_type}} == "Architect/Civil Engineer" %}
+	{{ "Architects_and_Engineers_Static.pdf" | render_static_document }}
 
 {% else %}
-	{{ "Static PDF example.pdf"| render_static_document }}
+	{{ "General_Static.pdf"| render_static_document }}
 
 {% endif %}
