--- a/product_examples/errors-and-omissions/products/E&O/policy/underwriting.guidelines.liquid
+++ b/product_examples/errors-and-omissions/products/E&O/policy/underwriting.guidelines.liquid
@@ -2,7 +2,7 @@
 {% assign vehicles = data.policy.exposures %}
 
 
-{% if policy_v.atfault_claims_past_5_years == 'None' %}
+{% if policy_v.claims_past_5_years == 'None' %}
     {{ "accept" | set_underwriting_decision }}
     {{ "Premium includes credit for being claims free." | add_underwriting_note }}
 {% else %}
@@ -11,20 +11,24 @@
 {% endif %}
 
 
-{% for vehicle in vehicles %}
-	{% assign vehicle_value = vehicle.characteristics[0].field_values.vehicle_value %}
-	{% if vehicle_value >= 100000 %}
+{% for professionalindemnity in professionalindemnitys %}
+	{% assign revenuethisyear = professionalindemnity.characteristics[0].field_values.revenuethisyear %}
+	{% if revenuethisyear >= 50000000 %}
 		{{ "reject" | set_underwriting_decision }}
-		{{ "Cars valued at $100,000 and over cannot be covered through this program." | add_underwriting_note }}
+		{{ "For Revenue $50,000,000 and over cannot be covered through this program." | add_underwriting_note }}
 	{% endif %}
 {% endfor %}
 
 
-{% if policy_v.10_year_felony_conviction == 'Yes' %} 
+{% if policy_v.10_year_felony_conviction_of_directors == 'Yes' %} 
     {{ "reject" | set_underwriting_decision }}
     {{ "Due to the Felony Conviction(s) this Policy Cannot be Bound." | add_underwriting_note }}       
 {% endif %}
 
+{% if policy_v.pending_claims == 'Yes' %} 
+    {{ "reject" | set_underwriting_decision }}
+    {{ "Due to Pending Claims this Policy Cannot be Bound." | add_underwriting_note }}       
+{% endif %}
 
 {% if policy_v.insurance_fraud_conviction == 'Yes' %} 
     {{ "reject" | set_underwriting_decision }}
